# project5561

./: .directory  .gitignore  CMakeLists.txt  EyeMARSTest.cpp  HistMatching.cpp  HistMatching.h  OrbMatching.cpp  OrbMatching.hpp  eqTest  eqTest.cpp  eyeMARSTest  findFreak.cpp  findOrb.cpp  findOrbCV.cpp  five-point-algorithm.cpp  five-point-solver.cpp  histTest  histTest.cpp  main.cpp  matchTest.cpp  matchTest_debug.cpp  orbTest  utils.h
imgs/: calibration.xml  calibration_6.xml
imgs/exposure-1/: 10_matched.pgm  11_matched.pgm  12_matched.pgm  13_matched.pgm  14_matched.pgm  15_matched.pgm  16_matched.pgm  17_matched.pgm  18_matched.pgm  19_matched.pgm  1_matched.pgm  1_matched2.pgm  20_matched.pgm  21_matched.pgm  22_matched.pgm  23_matched.pgm  24_matched.pgm  25_matched.pgm  26_matched.pgm  27_matched.pgm  28_matched.pgm  29_matched.pgm  2_matched.pgm  2_matched2.pgm  30_matched.pgm  31_matched.pgm  3_matched.pgm  3_matched2.pgm  4_matched.pgm  4_matched2.pgm  5_matched.pgm  5_matched2.pgm  6_matched.pgm  6_matched2.pgm  7_matched.pgm  7_matched2.pgm  8_matched.pgm  9_matched.pgm
include/: algebra.h  types.h
include/core/: binary-feature.h  binary-vector.h  brisk-feature.h  corner.h  freak-feature.h  image.h  keypoint.h  matrix1d.h  matrix2d.h  orb-feature.h  patch.h  pyramid.h  storage.h
include/geometry/: camera-models.h  error.h  geometry.h  three-point-plus-gravity.h  vision.h
include/imgproc/: BlurrinessDetection.h  blurrinessPrecomp.h  five-tap-gaussian-blur.h  gaussian-blur.h  isalignedfull16neon.h  pyramiddown.h  sharrgradient.h  sobelgradient.h  svmStruct.txt  undistort.h
include/imgproc/cpufreak/: CFREAK.h  dog-q-format.h  find-extrema.h  subpixel-refinement.h
include/imgproc/dense/: config.h  dense_run_n_create_graphs.h  gradients.h  observe_dense.h
include/imgproc/dog/: dog-c-impl.h  dog-q-format.h  dog-shared.h  find-extrema.h  subpixel-refinement.h
include/imgproc/fast/: fastcornerextractor.h
include/imgproc/freak/: freak-helper.h  freak-neon.h  freak-predefined.h  freak-sample-neon.h  freak.h
include/imgproc/harris/: cornerextractor.h  dilate.h  (+5 more)
include/ransac/: ransac.h
include/ransac-solver/: classify-lines.h  five-point-solver.h  ransac-solver.h  solvers.h  three-point-plus-gravity-solver.h  two-feat-plus-gravity-solver.h  two-point-plus-gravity-solver.h  two-point-plus-gravity.h  two-point-solver.h  two_pt_rs_solver.h  zero-point-solver.h
include/vocab_tree/: BinaryVTFeature.h  BriskVTFeature.h  Common.h  FloatVTFeature.h  FreakVTFeature.h  InvertedFile.h  KMeans.h  OrbVTFeature.h  RansacFiltering.h  SIFTVTFeature.h  Utils.h  VLImage.h  VTFeature.h  VTFeatureLoader.h  VocabTree.h  brisk.h  freak.h  orb.h  sift.h
opencv_mars/lib/: libopencv_calib3d.so.3.0.0  libopencv_contrib.so.3.0.0  libopencv_core.so.3.0.0  libopencv_features2d.so.3.0.0  libopencv_highgui.so.3.0.0  libopencv_imgproc.so.3.0.0  libopencv_ml.so.3.0.0  libopencv_nonfree.so.3.0.0  libopencv_objdetect.so.3.0.0  libopencv_optim.so.3.0.0  libopencv_photo.so.3.0.0  libopencv_shape.so.3.0.0  libopencv_softcascade.so.3.0.0  libopencv_superres.so.3.0.0  libopencv_video.so.3.0.0  libopencv_videostab.so.3.0.0
(+21 files in other folders)
